Migrate MWM to Android Studio. Now compile but not worked :)

--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-    <style name="Theme.Styled" parent="Theme.Sherlock">
+    <style name="Theme.Styled" parent="Theme.AppCompat">
         <item name="android:windowBackground">@drawable/background</item>
         
 	    <item name="actionBarStyle">@style/Widget.Styled.ActionBar</item>
@@ -16,11 +16,11 @@
 	    
 	    <item name="android:selectableItemBackground">@drawable/action_bar_selector</item>
     </style>
-    <style name="Widget.Styled.ActionBar" parent="Widget.Sherlock.ActionBar">
+    <style name="Widget.Styled.ActionBar" parent="Widget.AppCompat.ActionBar">
         <item name="background">@color/translucent_color</item>
         <item name="android:background">@color/translucent_color</item>
     </style>
-    <style name="MyPopupMenu" parent="style/Widget.Sherlock.ListPopupWindow">
+    <style name="MyPopupMenu" parent="@style/Widget.AppCompat.PopupWindow">
     	<item name="android:popupBackground">@drawable/popup_background</item> 
 	</style>
 </resources>
